package akiban_schema.protobuf;
option java_package = "com.akiban.ais.protobuf";
option java_outer_classname = "AkibanInformationSchema";

message Type {
   required string name = 1;
   required bool  parameters = 2;
   required bool  fixedSize = 3;
   required int32 maxSizeBytes = 4;
}

message TableName {
    required string schemaName = 1;
    required string tableName = 2;
}

message JoinColumn {
   required string joinName = 1;
   required string parentColumn = 2;
   required string childColumn = 3;
   required int32  position    = 4;
}

message Join {
    required string    joinName    = 1;
    required TableName parentTable = 2;
    required TableName childTable  = 3;
    required int32     position    = 5;

    repeated JoinColumn columns    = 8;
    
    optional string    description = 16;
}

message Group {
   required string name = 1;
   repeated Join   joins = 2; 
   optional string description = 16;
}

message IndexColumn {
    required string        columnName = 1; 
    required int32         position = 2;
    required bool          ascending = 3;
}

message Column {
    required string        columnName = 1;
    required string        typeName = 2;
    required int32         position = 3;
    required bool          isNullable = 4;
    
    optional int64         typeParam1 = 16;
    optional int64         typeParam2 = 17;
    optional int64         initAutoInc = 18;
    optional string        characterSet = 19;
    optional string        collation    = 20;    

    optional string        description = 32;
}

message Index {
    required string        indexName = 1;
    required string	   treeName  = 2;
    required int32         indexId   = 3;
    required bool          isUnique  = 4;
    required bool          isAkFK    = 5;
    required bool          isTableIndex = 6;
    required bool          isPK      = 7;
    
    repeated IndexColumn   columns = 8;
    
    optional string        description = 16;
}

message Table {
    required string     name = 1;
    required string    treeName = 2;
    required sfixed32  tableId =  3 [default = -1];
    required bool      userTable = 4;
    
    repeated Column columns = 8;
    repeated Index  indexes = 9;
    
    optional string        description = 16;    
}

message Schema {
    required string name = 1;
    repeated Table  tables = 8;
    repeated Group  groups = 9;
}

message AkibanInformationSchemaImpl {
    repeated Type types = 1;
    repeated Schema schemas = 8;
}
